[build-system]
requires = ["setuptools>=61.0"]
build-backend = "setuptools.build_meta"

[project]
name = "RuntimeSetup"
version = "0.0.1"
authors = [
  { name="Hunter Dale", email="guyyatsu@guyyatsu.me" },
]
description = "A framework for making argument passing and logging easier."
readme = "readme.md"
requires-python = ">=3.7"
classifiers = [
    "Programming Language :: Python :: 3",
    "License :: OSI Approved :: MIT License",
    "Operating System :: OS Independent",
]

[project.urls]
"Homepage" = "https://github.com/guyyatsu/TechnicalOverhead"
"Bug Tracker" = "https://github.com/guyyatsu/TechnicalOverhead/issues"
